# snake-case-migrator

./: README.md  pyproject.toml
snake_case_migration/: cli.py  manifest.py  names.py  rewrite_rst.py  rewrite_text.py  scan_py.py  scope.py
tests/: test_snake_case_migration_audit.py  test_snake_case_migration_manifest.py  test_snake_case_migration_names.py  test_snake_case_migration_rewrite_py.py  test_snake_case_migration_rewrite_rst.py  test_snake_case_migration_rewrite_text.py  test_snake_case_migration_scan_py.py
tests/fixtures/: snake_case_migration.toml
